weekly times shown at one time

--- a/projects/salaattimes/output/salaat_week_2025-11-14_to_2025-11-20.html
+++ b/projects/salaattimes/output/salaat_week_2025-11-14_to_2025-11-20.html
@@ -46,7 +46,7 @@
   table {
     width: 100%;
     border-collapse: collapse;
-    font-size: 22px;
+    font-size: 24px;
     color: #2f4f2f;
     background: transparent;
     margin-top: 8px;
@@ -70,20 +70,14 @@
     <div class="range">Nov 14 – Nov 20</div>
     <table>
       <tr>
-        <th>Day</th>
-        <th>Fajr</th>
-        <th>Zuhr</th>
-        <th>Asr</th>
-        <th>Maghrib</th>
-        <th>Isha</th>
+        <th>Salaat</th>
+        <th>Time</th>
       </tr>
-      <tr><td>Fri</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
-      <tr><td>Sat</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
-      <tr><td>Sun</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
-      <tr><td>Mon</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
-      <tr><td>Tue</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
-      <tr><td>Wed</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
-      <tr><td>Thu</td><td>5:20AM</td><td>1:15PM</td><td>1:15PM</td><td>5:00PM</td><td>7:15PM</td></tr>
+      <tr><td>Fajr</td><td>5:20AM</td></tr>
+      <tr><td>Zuhr</td><td>1:15PM</td></tr>
+      <tr><td>Asr</td><td>1:15PM</td></tr>
+      <tr><td>Maghrib</td><td>5:00PM</td></tr>
+      <tr><td>Isha</td><td>7:15PM</td></tr>
     </table>
   </div>
 </div>
